[package]
name = "yes-or-no"
version = "0.1.0"
authors = ["Francesca Lovebloom <francesca@brainiumstudios.com>"]
edition = "2018"
description = "A macro that generates an enum with the variants `Yes` and `No`."
documentation = "https://docs.rs/yes-or-no"
repository = "https://github.com/BrainiumLLC/yes-or-no"
readme = "README.md"
keywords = ["macro"]
categories = ["rust-patterns"]
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"
syn = "1.0.33"
